// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Create Article renders Create Article 1`] = `
<div
  style={
    Object {
      "marginTop": "4%",
      "paddingBottom": "5%",
    }
  }
>
  <div
    className="MuiGrid-container-1"
  >
    <div
      className="MuiGrid-item-2 MuiGrid-grid-xs-1-30 MuiGrid-grid-md-3-60"
    />
    <div
      className="MuiGrid-item-2 MuiGrid-grid-xs-10-39 MuiGrid-grid-md-6-63"
      style={
        Object {
          "display": "flex",
          "marginBottom": "3%",
        }
      }
    >
      <div
        className="MuiAvatar-root-98 MuiAvatar-colorDefault-99"
        style={
          Object {
            "alignSelf": "center",
            "backgroundColor": "green",
            "height": 50,
            "margin": 10,
            "width": 50,
          }
        }
      >
        U
      </div>
      <div
        style={
          Object {
            "display": "flex",
            "flexDirection": "column",
          }
        }
      >
        <h3
          className="MuiTypography-root-101 MuiTypography-subheading-108"
          style={
            Object {
              "marginTop": 12,
            }
          }
        >
          user
        </h3>
        <p
          className="MuiTypography-root-101 MuiTypography-body1-110 MuiTypography-colorTextSecondary-124"
        >
          desc
        </p>
        <p
          className="MuiTypography-root-101 MuiTypography-body1-110 MuiTypography-colorTextSecondary-124"
        >
          Draft
        </p>
      </div>
    </div>
    <div
      className="MuiGrid-item-2 MuiGrid-grid-xs-1-30 MuiGrid-grid-md-3-60"
    />
  </div>
  <div
    className="MuiGrid-container-1"
  >
    <div
      className="MuiGrid-item-2 MuiGrid-grid-xs-1-30 MuiGrid-grid-md-3-60"
    />
    <div
      className="MuiGrid-item-2 MuiGrid-grid-xs-10-39 MuiGrid-grid-md-6-63"
    >
      <div
        aria-describedby={undefined}
        className="MuiFormControl-root-126 MuiFormControl-marginNormal-127"
        style={
          Object {
            "width": "100%",
          }
        }
      >
        <label
          className="MuiFormLabel-root-135 MuiInputLabel-root-130 MuiInputLabel-formControl-131 MuiInputLabel-animated-134"
          data-shrink={false}
          htmlFor="title"
        >
          Title
        </label>
        <div
          className="MuiInput-root-142 MuiInput-formControl-143 MuiInput-underline-146"
        >
          <input
            aria-invalid={false}
            autoComplete={undefined}
            autoFocus={undefined}
            className="MuiInput-input-150"
            defaultValue={undefined}
            disabled={false}
            id="title"
            name={undefined}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={undefined}
            onKeyUp={undefined}
            placeholder={undefined}
            readOnly={undefined}
            required={false}
            rows={undefined}
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        className="MuiFormControl-root-126"
        style={
          Object {
            "marginTop": 24,
            "width": "100%",
          }
        }
      >
        <label
          className="MuiFormLabel-root-135 MuiFormLabel-required-140 MuiInputLabel-root-130 MuiInputLabel-formControl-131 MuiInputLabel-animated-134"
          data-shrink={false}
          htmlFor="category-required"
        >
          Category
          <span
            className="MuiFormLabel-asterisk-141"
          >
             *
          </span>
        </label>
        <div
          className="MuiInput-root-142 MuiInput-formControl-143 MuiInput-underline-146"
        >
          <div
            className="MuiSelect-root-155"
          >
            <div
              aria-haspopup="true"
              aria-owns={null}
              aria-pressed="false"
              className="MuiSelect-select-156 MuiSelect-selectMenu-157 MuiInput-input-150"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              role="button"
              tabIndex={0}
            >
              <span
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "&#8203;",
                  }
                }
              />
            </div>
            <input
              autoComplete={undefined}
              autoFocus={undefined}
              defaultValue={undefined}
              id={undefined}
              name="category"
              onKeyDown={undefined}
              onKeyUp={undefined}
              placeholder={undefined}
              rows={undefined}
              type="hidden"
              value=""
            />
            <svg
              aria-hidden="true"
              className="MuiSvgIcon-root-160 MuiSelect-icon-159"
              color={undefined}
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M7 10l5 5 5-5z"
              />
            </svg>
          </div>
        </div>
        <p
          className="MuiFormHelperText-root-171 MuiFormHelperText-required-177"
        >
          Required
        </p>
      </div>
    </div>
    <div
      className="MuiGrid-item-2 MuiGrid-grid-xs-1-30 MuiGrid-grid-md-3-60"
    />
  </div>
  <div
    className="MuiGrid-container-1"
    style={
      Object {
        "marginTop": "5%",
      }
    }
  >
    <div
      className="MuiGrid-item-2 MuiGrid-grid-xs-1-30 MuiGrid-grid-md-3-60"
    />
    <div
      className="MuiGrid-item-2 MuiGrid-grid-xs-10-39 MuiGrid-grid-md-6-63"
    >
      <h2
        className="MuiTypography-root-101 MuiTypography-body1-110 MuiTypography-colorTextPrimary-123"
        style={
          Object {
            "color": "#E53935",
          }
        }
      >
        
      </h2>
      <button
        className="MuiButtonBase-root-204 MuiButtonBase-disabled-205 MuiButton-root-178 MuiButton-text-180 MuiButton-outlined-186 MuiButton-disabled-198"
        disabled={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        style={
          Object {
            "marginRight": 10,
            "marginTop": 30,
          }
        }
        tabIndex="-1"
        type="button"
      >
        <span
          className="MuiButton-label-179"
        >
          Publish
        </span>
      </button>
      <button
        className="MuiButtonBase-root-204 MuiButton-root-178 MuiButton-text-180 MuiButton-outlined-186"
        disabled={false}
        id="cancelButton"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        style={
          Object {
            "marginRight": 10,
            "marginTop": 30,
          }
        }
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiButton-label-179"
        >
          Cancel
        </span>
        <span
          className="MuiTouchRipple-root-207"
        />
      </button>
    </div>
    <div
      className="MuiGrid-item-2 MuiGrid-grid-xs-1-30 MuiGrid-grid-md-3-60"
    />
  </div>
</div>
`;

exports[`Create Article renders Create Article with isCreatingArticle as true 1`] = `
<div
  style={
    Object {
      "marginTop": "4%",
      "paddingBottom": "5%",
    }
  }
>
  <div
    className="MuiGrid-container-1"
  >
    <div
      className="MuiGrid-item-2 MuiGrid-grid-xs-1-30 MuiGrid-grid-md-3-60"
    />
    <div
      className="MuiGrid-item-2 MuiGrid-grid-xs-10-39 MuiGrid-grid-md-6-63"
      style={
        Object {
          "display": "flex",
          "marginBottom": "3%",
        }
      }
    >
      <div
        className="MuiAvatar-root-98 MuiAvatar-colorDefault-99"
        style={
          Object {
            "alignSelf": "center",
            "backgroundColor": "green",
            "height": 50,
            "margin": 10,
            "width": 50,
          }
        }
      >
        U
      </div>
      <div
        style={
          Object {
            "display": "flex",
            "flexDirection": "column",
          }
        }
      >
        <h3
          className="MuiTypography-root-101 MuiTypography-subheading-108"
          style={
            Object {
              "marginTop": 12,
            }
          }
        >
          user
        </h3>
        <p
          className="MuiTypography-root-101 MuiTypography-body1-110 MuiTypography-colorTextSecondary-124"
        >
          desc
        </p>
        <p
          className="MuiTypography-root-101 MuiTypography-body1-110 MuiTypography-colorTextSecondary-124"
        >
          Draft
        </p>
      </div>
    </div>
    <div
      className="MuiGrid-item-2 MuiGrid-grid-xs-1-30 MuiGrid-grid-md-3-60"
    />
  </div>
  <div
    className="MuiGrid-container-1"
  >
    <div
      className="MuiGrid-item-2 MuiGrid-grid-xs-1-30 MuiGrid-grid-md-3-60"
    />
    <div
      className="MuiGrid-item-2 MuiGrid-grid-xs-10-39 MuiGrid-grid-md-6-63"
    >
      <div
        aria-describedby={undefined}
        className="MuiFormControl-root-126 MuiFormControl-marginNormal-127"
        style={
          Object {
            "width": "100%",
          }
        }
      >
        <label
          className="MuiFormLabel-root-135 MuiInputLabel-root-130 MuiInputLabel-formControl-131 MuiInputLabel-animated-134"
          data-shrink={false}
          htmlFor="title"
        >
          Title
        </label>
        <div
          className="MuiInput-root-142 MuiInput-formControl-143 MuiInput-underline-146"
        >
          <input
            aria-invalid={false}
            autoComplete={undefined}
            autoFocus={undefined}
            className="MuiInput-input-150"
            defaultValue={undefined}
            disabled={false}
            id="title"
            name={undefined}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={undefined}
            onKeyUp={undefined}
            placeholder={undefined}
            readOnly={undefined}
            required={false}
            rows={undefined}
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        className="MuiFormControl-root-126"
        style={
          Object {
            "marginTop": 24,
            "width": "100%",
          }
        }
      >
        <label
          className="MuiFormLabel-root-135 MuiFormLabel-required-140 MuiInputLabel-root-130 MuiInputLabel-formControl-131 MuiInputLabel-animated-134"
          data-shrink={false}
          htmlFor="category-required"
        >
          Category
          <span
            className="MuiFormLabel-asterisk-141"
          >
             *
          </span>
        </label>
        <div
          className="MuiInput-root-142 MuiInput-formControl-143 MuiInput-underline-146"
        >
          <div
            className="MuiSelect-root-155"
          >
            <div
              aria-haspopup="true"
              aria-owns={null}
              aria-pressed="false"
              className="MuiSelect-select-156 MuiSelect-selectMenu-157 MuiInput-input-150"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              role="button"
              tabIndex={0}
            >
              <span
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "&#8203;",
                  }
                }
              />
            </div>
            <input
              autoComplete={undefined}
              autoFocus={undefined}
              defaultValue={undefined}
              id={undefined}
              name="category"
              onKeyDown={undefined}
              onKeyUp={undefined}
              placeholder={undefined}
              rows={undefined}
              type="hidden"
              value=""
            />
            <svg
              aria-hidden="true"
              className="MuiSvgIcon-root-160 MuiSelect-icon-159"
              color={undefined}
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M7 10l5 5 5-5z"
              />
            </svg>
          </div>
        </div>
        <p
          className="MuiFormHelperText-root-171 MuiFormHelperText-required-177"
        >
          Required
        </p>
      </div>
    </div>
    <div
      className="MuiGrid-item-2 MuiGrid-grid-xs-1-30 MuiGrid-grid-md-3-60"
    />
  </div>
  <div
    className="MuiGrid-container-1"
    style={
      Object {
        "marginTop": "5%",
      }
    }
  >
    <div
      className="MuiGrid-item-2 MuiGrid-grid-xs-1-30 MuiGrid-grid-md-3-60"
    />
    <div
      className="MuiGrid-item-2 MuiGrid-grid-xs-10-39 MuiGrid-grid-md-6-63"
    >
      <h2
        className="MuiTypography-root-101 MuiTypography-body1-110 MuiTypography-colorTextPrimary-123"
        style={
          Object {
            "color": "#E53935",
          }
        }
      >
        
      </h2>
      <button
        className="MuiButtonBase-root-204 MuiButtonBase-disabled-205 MuiButton-root-178 MuiButton-text-180 MuiButton-outlined-186 MuiButton-disabled-198"
        disabled={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        style={
          Object {
            "marginRight": 10,
            "marginTop": 30,
          }
        }
        tabIndex="-1"
        type="button"
      >
        <span
          className="MuiButton-label-179"
        >
          <div
            className="MuiCircularProgress-root-221 MuiCircularProgress-colorPrimary-224 MuiCircularProgress-indeterminate-223"
            role="progressbar"
            style={
              Object {
                "height": 22,
                "width": 22,
              }
            }
          >
            <svg
              className="MuiCircularProgress-svg-226"
              viewBox="22 22 44 44"
            >
              <circle
                className="MuiCircularProgress-circle-227 MuiCircularProgress-circleIndeterminate-229"
                cx={44}
                cy={44}
                fill="none"
                r={20.2}
                strokeWidth={3.6}
                style={Object {}}
              />
            </svg>
          </div>
        </span>
      </button>
      <button
        className="MuiButtonBase-root-204 MuiButton-root-178 MuiButton-text-180 MuiButton-outlined-186"
        disabled={false}
        id="cancelButton"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        style={
          Object {
            "marginRight": 10,
            "marginTop": 30,
          }
        }
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiButton-label-179"
        >
          Cancel
        </span>
        <span
          className="MuiTouchRipple-root-207"
        />
      </button>
    </div>
    <div
      className="MuiGrid-item-2 MuiGrid-grid-xs-1-30 MuiGrid-grid-md-3-60"
    />
  </div>
</div>
`;
